Bug 288647 - Scheduled transactions can't be skipped when entering them automatically at start-up or before reconciliation
Summary: Scheduled transactions can't be skipped when entering them automatically at s...
Status: RESOLVED FIXED
Alias: None
Product: kmymoney
Classification: Applications
Component: general (other bugs)
Version First Reported In: SVN
Platform: Gentoo Packages Linux
: NOR normal
Target Milestone: ---
Assignee: KMyMoney Devel Mailing List
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2011-12-10 12:26 UTC by Cristian Oneț
Modified: 2011-12-10 12:51 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Cristian Oneț 2011-12-10 12:26:34 UTC
Version:           SVN trunk (using KDE 4.7.3) 
OS:                Linux

In the same scenario as described in bug 254363 the skip option does not work.

Reproducible: Didn't try

Steps to Reproduce:
1. Start with a scheduled transaction that requires confirmation before entering.
2. Select 'Skip'

Actual Results:  
The same instance of the transaction is presented again.

Expected Results:  
The next instance of the transaction should be presented if it should be entered or present the next schedule to be entered.

OS: Linux (x86_64) release 3.0.6-gentoo
Compiler: x86_64-pc-linux-gnu-gcc
Comment 1 Cristian Oneț 2011-12-10 12:49:30 UTC
Git commit a307202c2da2348767705209f774b2e19f56da2a by Cristian Oneț.
Committed on 10/12/2011 at 13:38.
Pushed by conet into branch 'master'.

Scheduled transactions can't be skipped when entering them automatically at start-up or before reconciliation.
Fix this by splitting slotScheduleSkip into slotScheduleSkip that works on m_selectedSchedule and skipSchedule
that does the actual work and takes the schedule as a parameter (just like slotScheduleEnter/enterSchedule).

Use skipSchedule in enterSchedule if 'Skip' was selected instead of slotScheduleSkip.

As a side note the schedule is read again and again based on the id from the engine. Some of those calls could be
unnecessary so there is space for improvement here but I did not want to touch that so that I can safely backport
this fix to the stable branch.

BUG: 288647

M  +18   -5    kmymoney/kmymoney.cpp
M  +7    -0    kmymoney/kmymoney.h

http://commits.kde.org/kmymoney/a307202c2da2348767705209f774b2e19f56da2a
Comment 2 Cristian Oneț 2011-12-10 12:51:59 UTC
Git commit 384a8a77243396e5837d60446a2ce5d61b6e90f6 by Cristian Oneț.
Committed on 10/12/2011 at 13:38.
Pushed by conet into branch '4.6'.

Scheduled transactions can't be skipped when entering them automatically at start-up or before reconciliation.
Fix this by splitting slotScheduleSkip into slotScheduleSkip that works on m_selectedSchedule and skipSchedule
that does the actual work and takes the schedule as a parameter (just like slotScheduleEnter/enterSchedule).

Use skipSchedule in enterSchedule if 'Skip' was selected instead of slotScheduleSkip.

As a side note the schedule is read again and again based on the id from the engine. Some of those calls could be
unnecessary so there is space for improvement here but I did not want to touch that so that I can safely backport
this fix to the stable branch.

BUG: 288647

M  +18   -5    kmymoney/kmymoney.cpp
M  +7    -0    kmymoney/kmymoney.h

http://commits.kde.org/kmymoney/384a8a77243396e5837d60446a2ce5d61b6e90f6